Corrected body overflow, optimized the sh*t out of the game concerning collisions and shadows

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-body {
+html, body {
 	width: 100%;
 	height: 100%;
 	margin: 0;
-	position: absolute;
+	overflow: hidden;
 }
 
 interface {
